# BareTensor

./: .gitignore  LICENSE  README.md  mnist_mlp_weights.npz  pyproject.toml
baretensor/: __init__.py  data.py  nn.py  optim.py  tensor.py
docs/: api.md  examples.md  getting_started.md  overview.md
examples/: 01_xor_problem.py  02_transformer.py  03_mnist.py  04_micro_gpt.py  05_adam_vs_sgd.py  06_dataloader_demo.py  07_mnist_classifier.py  08_mnist_deep.py  09_cartpole_rl.py
tests/: test_autograd.py  test_tensor_ops.py
