[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baretensor"
version = "0.1.0"
description = "A purely educational, NumPy-only autograd engine and deep learning framework built from scratch"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "torch",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baretensor*"]
