[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baretensor"
version = "0.2.0"
description = "A pure-NumPy deep learning framework with reverse-mode automatic differentiation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Omnivex3", email = ""},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "torch",
]

[project.urls]
Homepage = "https://github.com/Omnivex3/BareTensor"
Repository = "https://github.com/Omnivex3/BareTensor"

[tool.hatch.build.targets.wheel]
packages = ["baretensor"]
